--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,186 @@
 .App {
   text-align: center;
+  height: 100vh;
+  position: relative;
+  background-color: cornflowerblue;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.page {
+  position: relative;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+.page--login{
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.content{
+  position:relative;
+  padding: 8px;
+}
+.inline-input{
+  margin: 0;
+  display: inline-block;
+  float: left;
+}
+
+.inline-search-input{
+  width: 77%;
+}
+
+.search-bar{
+  display: inline-block;
+  width: 100%;
+  height: 38px;
+  color: #3d393a;
+  margin: 0;
+  -moz-appearance: none;
+  appearance: none;
+  -webkit-appearance: none;
+  transition: background-color .5s;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  box-sizing: border-box;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Arial,sans-serif;
+  font-weight: 300;
+  position: relative;
+  padding: 8px 10px 8px 8px;
+  font-size: 2em;
+  height: 90%;
+}
+
+.content-top{
+  margin-bottom: 48px;
+  margin-top: 8px;
+}
+
+.clearfix{
+  overflow: auto;
+}
+
+.page--search{
+  height: 100vh;
+}
+.page-left{
+  padding: 16px 0 16px 8px;
+}
+
+.p-2{
+  padding: 16px;
+}
+
+.pb-2{
+  padding-bottom: 16px;
+}
+.btn {
+  border: 1px solid grey;
+  transition: background-color .3s;
+  border-radius: 2px;
+  box-sizing: border-box;
+  height: 28px;
+  line-height: 28px;
+  padding: 0 15px;
+  position: relative;
+  text-align: center;
+  text-transform: uppercase;
+  vertical-align: middle;
+}
+
+
+.btn:hover{
+  background-color: darkred;
+}
+
+.btn--primary {
+  background-color: red;
   color: white;
 }
 
-.App-title {
-  font-size: 1.5em;
+.btn--secondary {
+  background-color: blue;
+  color: white;
 }
 
-.App-intro {
-  font-size: large;
+/*.btn--primary {
+  background-color: red;
+  color: white;
+}*/
+
+.c-menu {
+  margin: 60% 0 60% 0;
+  padding: 18px;
+}
+.test {
+  border: 1px red dotted;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.badge {
+  width: 156px;
+  height: auto;
+}
+.menu-bg {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border-radius: 25px;
+}
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  float: left;
+  margin-top: 8px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {display:none;}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #B08B7B;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
